syntax = "proto3";
package commonMq;
option go_package = "github.com/luxun9527/gex/common/proto/mq/match;match";
import "enum/enum.proto";

message MatchReq{
  oneof Operate{
      NewOrderOperate new_order=1;
      CancelOperate cancel=2;
  }
}


message MatchResp{
  oneof Resp{
      MatchResult match_result=1;
      CancelResp cancel=2;
  }
}

//下单操作
message NewOrderOperate{
  //订单id
  string order_id=1;
  //订单序号,唯一在订单簿中如果价格相同，用这个来排序。也是订单的主键id
  int64 sequence_id=2;
  //用户id
  int64 uid=9;
  //订单方向
  commonEnum.Side side=3;
  //价格
  string price=7;
  //订单数量
  string qty=4;
  //订单金额 计价币数量
  string amount=5;
  //订单类型
  commonEnum.OrderType order_type=6;
  //交易对id
  int32 symbol_id=8;
  //交易对名称
  string symbol_name=10;
}
//取消订单操作。
message CancelOperate{
  int64 id=1; //主键id

  string price=2; //价格

  commonEnum.Side side=3;//方向

  commonEnum.OrderType order_type=6;   //订单类型


}


message OrderResp{
  //主键id
  int64 id=8;
  //用户id
  int64 uid=6;
  //订单id
  string order_id=1;
  //已经成交数量
  string filled_qty=2;
  //未成交的数量
  string un_filled_qty=7;
  //已经成交金额
  string filled_amount=3;
  //未成交的金额
  string un_filled_amount=4;
  //订单状态
  commonEnum.OrderStatus order_status=5;
  //解冻金额
  string un_frozen_amount =9;


}

//MatchResp 撮合结果
message MatchResult{
  //交易对id
  int32 symbol_id=8;
  //交易对id
  string symbol_name=9;
  //基础币id
  int32 base_coin_id=21;
  //基价币id
  int32 quote_coin_id=20;
  //撮合id
  string match_id=1;
  //taker是否是买
  bool taker_is_buy=22;
  //一次撮合记录匹配记录
  message MatchedRecord{
    //撮合匹配的数量
    string qty =4;
    //撮合价格
    string price=5;
    //撮合的金额
    string amount=10;
    //本次匹配的id
    string match_sub_id=6;
    //taker订单
    OrderResp taker=7;
    //maker 订单
    OrderResp maker=8;
  }
  repeated MatchedRecord matched_record=2;
  //开始价格
  string begin_price=3;
  //结束价格
  string end_price=4;
  //撮合时间
  int64  match_time=6;
  //数量
  string  qty=7;
  //金额
  string  amount=11;
  //最高价
  string high_price=12;
  //最低价
  string low_price=10;

}
//取消订单返回，表示订单被撤单
message CancelResp{
  //订单主键id
   int64 id=1;
  //解冻币种id
   int32 coin_id=2;
  //数量
  string qty=3;
  //用户id
  int64 uid=4;
}